--- a/check-dev.properties
+++ b/check-dev.properties
@@ -1,3 +1,3 @@
-check.name=naveen kumar
+check.name=naveen kumar in test branch
 check.password=kjashdfoiuabcaskljcausgvclisabc;adsn
 check.url=jdbc:khsbdjhkajdshflasfdkjah
